--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "osjs-build",
-  "version": "0.6.7",
+  "version": "0.6.8",
   "description": "OS.js Build System",
   "url": "https://www.os-js.org",
   "email": "andersevenrud@gmail.com",
@@ -27,5 +27,35 @@
     "webpack": "^3.1.0"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
+    "simplejsonconf": "^1.0.6",
+    "colors": "^1.1.2",
+    "clean-webpack-plugin": "^0.1.16",
+    "copy-webpack-plugin": "^4.0.1",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "favicons-webpack-plugin": "0.0.7",
+    "file-loader": "^0.11.2",
+    "html-loader": "git+https://github.com/webpack-contrib/html-loader.git#master",
+    "html-webpack-plugin": "^2.29.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
+    "mocha": "^3.4.2",
+    "osjs-scheme-loader": "^1.0.5",
+    "ygor": "^4.0.4",
+    "css-loader": "^0.28.4",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.4.1",
+    "fs-extra": "^3.0.1",
+    "glob": "^7.1.2",
+    "glob-promise": "^3.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.3.0",
+    "chai": "^4.0.2",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^3.4.2"
   }
 }
