--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "osjs-build",
-  "version": "0.8.6",
+  "version": "0.8.7",
   "description": "OS.js Build System",
   "url": "https://www.os-js.org",
   "email": "andersevenrud@gmail.com",
@@ -24,35 +24,33 @@
     "url": "https://github.com/os-js/osjs-build.git"
   },
   "dependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.5.0",
-    "simplejsonconf": "^1.0.6",
-    "colors": "^1.1.2",
+    "chai": "^4.0.2",
+    "chai-as-promised": "^7.1.1",
     "clean-webpack-plugin": "^0.1.16",
+    "colors": "^1.1.2",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.4",
+    "eslint": "^4.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.11.2",
-    "html-loader": "git+https://github.com/webpack-contrib/html-loader.git#master",
+    "fs-extra": "^3.0.1",
+    "glob": "^7.1.2",
+    "glob-promise": "^3.1.0",
+    "html-loader": "git+https://github.com/nuragic/html-loader.git#69e84c7a686af588cb428ff370396fcaa099c665",
     "html-webpack-plugin": "^2.29.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "mocha": "^3.4.2",
-    "osjs-scheme-loader": "^1.0.5",
-    "ygor": "^4.0.4",
-    "css-loader": "^0.28.4",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
+    "osjs-scheme-loader": "^1.0.6",
+    "simplejsonconf": "^1.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
-    "fs-extra": "^3.0.1",
-    "glob": "^7.1.2",
-    "glob-promise": "^3.1.0",
-    "eslint": "^4.3.0",
-    "chai": "^4.0.2",
-    "chai-as-promised": "^7.1.1",
-    "mocha": "^3.4.2"
+    "ygor": "^4.0.4"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
