--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "osjs-build",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "OS.js Build System",
   "url": "https://www.os-js.org",
   "email": "andersevenrud@gmail.com",
@@ -24,6 +24,7 @@
     "url": "https://github.com/os-js/osjs-build.git"
   },
   "dependencies": {
+    "minimist": "^1.2.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
